# chromos

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  main.cpp  project.yaml
.github/workflows/: main.yml
chromos-actors/: main.cpp  project.yaml
chromos-actors/chromos/actors/: Actor.cpp
chromos-channels/: project.yaml
chromos-channels/chromos/channels/: ConsumerChannel.cpp  ProducerChannel.h  PublisherChannel.cpp  PublisherChannel.h  SubscriberChannel.cpp  SubscriberChannel.h
chromos-channels/tests/: test_publisher_subscriber_channel.cpp
chromos-logging/: project.yaml
chromos-logging/chromos/logging/: Logger.h  LoggerInConsole.cpp  LoggerInConsole.h  LoggerInRotatingFile.cpp  LoggerInRotatingFile.h
chromos-logging/tests/: test_chromos_logging.cpp
chromos-optional/: project.yaml
chromos-optional/tests/: test_optional.cpp
chromos/actors/: Actor.h  ActorOnConsumerChannel.cpp  ActorOnConsumerChannel.h
chromos/channels/: ConsumerChannel.h  ProducerChannel.cpp
include/: dummy.h
src/: main.c
test/framework/: CMakeLists.txt
test/framework/cmock/iar/iar_v4/incIAR/: lib_AT91SAM7X256.h
test/framework/cmock/iar/iar_v5/incIAR/: lib_AT91SAM7X256.h
test/integration/: CMakeLists.txt
test/unit/: CMakeLists.txt  test_nothing.c
tests/: test_actor.cpp  test_actor_on_consumer_channel.cpp  test_point_to_point_channel.cpp
